--- a/app/views/student/electives.html.erb
+++ b/app/views/student/electives.html.erb
@@ -50,7 +50,7 @@
    <div class="category-edit"><%= link_to_remote "#{t('assign')}", :url=>{:controller=>"student",:action=>"assign_students",:id=>s.id,:id2=>@elective_subject.id} %></div>
         <% end %>
   </li>
-<% end %><%= t('view') %>
+<% end %>
 </ul>
 
 <div class="extender"></div>
