--- a/public/stylesheets/batches/create.css
+++ b/public/stylesheets/batches/create.css
@@ -32,3 +32,14 @@
     padding-top:10px;
     width:250px;
 }
+.label-container{
+    color:#444444;
+    display:block;
+    float:left;
+    font-size:14px;
+    font-weight:600;
+    margin:0 0 10px;
+    padding-top:10px;
+    width:242px;
+
+}
