sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@974 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -59,12 +59,12 @@
       </div>
 
       <div class="label-field-pair">
-        <div class="label-container"><label><%= t('import_subject') %></label></div>
+        <div class="label-container1"><label><%= t('import_subject') %></label></div>
         <div class="input-container"><%= check_box_tag 'import_subjects',"0",false %></div>
       </div>
 
       <div class="label-field-pair">
-        <div class="label-container"><label><%= t('import_fees') %></label></div>
+        <div class="label-container1"><label><%= t('import_fees') %></label></div>
         <div class="input-container"><%= check_box_tag 'import_fees',"0",false %></div>
       </div>
 
