[debanjan] issues in pms fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@979 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/master_fees.css
+++ b/public/stylesheets/finance/master_fees.css
@@ -103,8 +103,17 @@
     background : #eee;
     border : 1px solid #c6c6c6;
     margin : 5px 0 0 10px;
-    width : 30px;
-    height:17px;
+    width : auto;
+    height:auto;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    padding: 5px;
+}
+.opt input {
+    background : #eee;
+    border : 1px solid #c6c6c6;
+    margin : 5px 0 0 10px;
+    width : 50px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     padding: 5px;
@@ -137,7 +146,6 @@
     margin-left:200px;
     width:213px;
 }
-
 .each_batch{
     font-size: 12px;
     /*overflow:auto;
