--- a/public/stylesheets/exam/previous_years_marks_overview.css
+++ b/public/stylesheets/exam/previous_years_marks_overview.css
@@ -1,5 +1,5 @@
 .box{
-    width:750px;
+    width:100%;
     margin:0px auto;
 }
 table#listing {
@@ -7,7 +7,7 @@ table#listing {
 -webkit-border-radius:10px;
 background:none repeat scroll 0 0 #C3D9FF;
 padding:20px 20px 40px;
-width:770px;
+width:100%;
 }
 
 .next a{
@@ -64,7 +64,7 @@ width:770px;
     -webkit-border-radius:8px;
     margin-top:10px;
     margin-bottom:10px;
-    width: 770px;
+    width: 100%;
 }
 .header{
     width:490px;
@@ -138,7 +138,7 @@ padding:5px 5px 5px 10px;
 }
 
 #score-table{
-    width:766px;
+    width:100%;
     overflow: auto;
 }
 #inner-tab-menu ul li {
