style issue fixed in individual employee leave reset
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@987 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee_attendance/employee_leave_reset_by_employee.css
+++ b/public/stylesheets/employee_attendance/employee_leave_reset_by_employee.css
@@ -37,6 +37,7 @@
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     padding: 4px 0 0 5px;
+    float: left;
 }
 
 #search_textbox input:focus{
@@ -67,9 +68,10 @@
 }
 
 .advanced_options{
-    margin-left:304px;
+    margin-left:3px;
     margin-top:5px;
     width:600px;
+    float: left;
 }
 
 
@@ -86,8 +88,9 @@
     background : #fff url(../../images/form_bg/smalltextbox.jpg) no-repeat;
     height : 43px;
     width : 150px;
+    float: left;
 }
 #form-content{
     width:300px;
-    margin-left: 200px;
+    float: left;
 }
