sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@990 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_bank_fields.erb
+++ b/app/views/employee/_bank_fields.erb
@@ -23,8 +23,8 @@
     <%- @bank_details.each do |c| -%>
       <li class="list<%=cycle('odd', 'even')%>">
         <div class="category-name"><%= c.name %></div>
-        <div class="category-edit"><%= link_to "► #{t('edit_text')}", {:action => "edit_bank_details", :id=>c.id} %></div>
-        <div class="category-edit"><%= link_to "► #{t('delete_text')}", {:action => "delete_bank_details", :id=>c.id}, :confirm => "#{t('delete_confirm_msg')}" %></div>
+        <div class="category-edit"><%= link_to "#{t('edit_text')}", {:action => "edit_bank_details", :id=>c.id} %></div>
+        <div class="category-edit"><%= link_to "#{t('delete_text')}", {:action => "delete_bank_details", :id=>c.id}, :confirm => "#{t('delete_confirm_msg')}" %></div>
       </li>
     <% end %>
     <% unless @inactive_bank_details.empty? %>
@@ -32,8 +32,8 @@
       <%- @inactive_bank_details.each do |c| -%>
         <li class="list<%=cycle('odd', 'even')%>">
           <div class="category-name"><%= c.name %></div>
-          <div class="category-edit"><%= link_to "► #{t('edit_text')}", {:action => "edit_bank_details", :id=>c.id} %></div>
-          <div class="category-edit"><%= link_to "► #{t('delete_text')}", {:action => "delete_bank_details", :id=>c.id},:confirm=>"#{t('delete_confirm_msg')}" %></div>
+          <div class="category-edit"><%= link_to "#{t('edit_text')}", {:action => "edit_bank_details", :id=>c.id} %></div>
+          <div class="category-edit"><%= link_to "#{t('delete_text')}", {:action => "delete_bank_details", :id=>c.id},:confirm=>"#{t('delete_confirm_msg')}" %></div>
         </li>
       <% end %>
     <% end %>
