--- a/app/views/employee/edit_bank_details.erb
+++ b/app/views/employee/edit_bank_details.erb
@@ -53,7 +53,7 @@
         </div>
 
         <div id="submit-button">
-          <%=submit_tag("► #{t('create_text')}") %>
+          <%=submit_tag("► #{t('update')}") %>
         </div>
       </div>
 
