--- a/app/views/employee/profile_pdf.erb
+++ b/app/views/employee/profile_pdf.erb
@@ -52,7 +52,7 @@
   <div id="personal_info">
     <table id="pdf-table" width="100%" cellspacing="0">
       <tr class="odd"><td class="col-pdf"><%= t('dob') %></td><td class="col-pdf"><%= @employee.date_of_birth unless @employee.date_of_birth.nil? %></td></tr>
-      <tr class="even"><td class="col-pdf"><%= t('marital_status') %><</td><td class="col-pdf"><%= @employee.marital_status unless @employee.marital_status.nil? %></td></tr>
+      <tr class="even"><td class="col-pdf"><%= t('marital_status') %></td><td class="col-pdf"><%= @employee.marital_status unless @employee.marital_status.nil? %></td></tr>
       <tr class="odd"><td class="col-pdf"><%= t('no_of_children') %></td><td class="col-pdf"><%= @employee.children_count unless @employee.children_count.nil? %></td></tr>
       <tr class="even"><td class="col-pdf"><%= t('father_name') %></td><td class="col-pdf"><%= @employee.father_name unless @employee.father_name.nil? %></td></tr>
       <tr class="odd"><td class="col-pdf"><%= t('mother_name') %></td><td class="col-pdf"><%= @employee.mother_name unless @employee.mother_name.nil? %></td></tr>
@@ -74,12 +74,12 @@
       <tr class="even"><td class="col-pdf"><%= t('city') %></td><td class="col-pdf"><%= @employee.home_city unless @employee.home_city.nil? %></td></tr>
       <tr class="odd"><td class="col-pdf"><%= t('state') %></td><td class="col-pdf"><%= @employee.home_state unless @employee.home_state.nil? %></td></tr>
       <tr class="even"><td class="col-pdf"><%= t('country') %></td><td class="col-pdf"><%= @home_country unless @home_country.nil? %></td></tr>
-      <tr class="odd"><td class="col-pdf"><%= t('pin_code') %></td><td class="col-pdf"><%= @employee.home_pin_code unless @employee.home_pin_code.nil? %></td></tr>
+      <tr class="odd"><td class="col-pdf"><%= t('home') %> <%= t('zip') %></td><td class="col-pdf"><%= @employee.home_pin_code unless @employee.home_pin_code.nil? %></td></tr>
       <tr class="even"><td class="col-pdf"><%= t('office_address') %></td><td class="col-pdf"><%= @employee.office_address_line1 unless @employee.office_address_line1.nil? %><br/><%= @employee.office_address_line2 unless @employee.office_address_line2.nil? %></td></tr>
       <tr class="odd"><td class="col-pdf"><%= t('city') %></td><td class="col-pdf"><%= @employee.office_city unless @employee.office_city.nil? %></td></tr>
       <tr class="even"><td class="col-pdf"><%= t('state') %></td><td class="col-pdf"><%= @employee.office_state unless @employee.office_state.nil? %></td></tr>
       <tr class="odd"><td class="col-pdf"><%= t('country') %></td><td class="col-pdf"><%= @office_country unless @office_country.nil? %></td></tr>
-      <tr class="even"><td class="col-pdf"><%= t('pin_code') %></td><td class="col-pdf"><%= @employee.office_pin_code unless @employee.office_pin_code.nil? %></td></tr>
+      <tr class="even"><td class="col-pdf"><%= t('office') %> <%= t('zip') %></td><td class="col-pdf"><%= @employee.office_pin_code unless @employee.office_pin_code.nil? %></td></tr>
     </table>
 
   </div>
