--- a/app/views/employee/_address.erb
+++ b/app/views/employee/_address.erb
@@ -26,7 +26,7 @@
   <tr class="even left"><td><%= t('office_address') %></td><td class="right"><%=  @employee.office_address_line1 %>&nbsp;<%= @employee.office_address_line2 %></td></tr>
   <tr class="odd left"><td><%= t('city') %></td><td class="right"><%=  @employee.office_city %> </td></tr>
   <tr class="even left"><td><%= t('country') %></td><td class="right"><%=  @office_country %></td></tr>
-  <tr class="odd left"><td><%= t('pin_code') %></td><td class="right"><%= @employee.office_pin_code %></td></tr>
+  <tr class="odd left"><td><%= t('zip') %></td><td class="right"><%= @employee.office_pin_code %></td></tr>
 </table>
 <div class="extender"></div>
 <div class="edit-pdf-group">
