--- a/app/views/employee/_bank_details.erb
+++ b/app/views/employee/_bank_details.erb
@@ -27,7 +27,7 @@
   <div class="edit-pdf-group">
     <% if permitted_to? :edit3, :employee %>
       <div class="edit">
-        <%= link_to "► #{t('edit')}",   :controller => "employee", :action => "edit3", :id =>@employee.id %>
+        <%= link_to "► #{t('edit_text')}",   :controller => "employee", :action => "edit3", :id =>@employee.id %>
       </div>
     <%end%>
     <% if permitted_to?  :profile_pdf , :employee %>
