--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -21,6 +21,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
     <title><%= @title %></title>
     <link rel="icon" href="/favicon.ico" type="image/ico" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/ico" />
