--- a/app/views/finance/student_fee_receipt_pdf.erb
+++ b/app/views/finance/student_fee_receipt_pdf.erb
@@ -114,10 +114,11 @@
               <td class="col-1" colspan="2"><span><%= t('payment_done') %></span></td>
             </tr>
             <% paid = 0 %>
+            <% x = 0  %>
             <% @paid_fees.each do |p| %>
               <% paid += p.amount.to_f %>
               <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-                <td class="col-pdf"><%= i+=1 %></td>
+                <td class="col-pdf"><%= x+=1 %></td>
                 <td class="col-pdf"><%= "#{t('partial_payment_on')}" + p.transaction_date.to_s %></td>
                 <td class="col-pdf"><%= "-"+@currency_type.to_s + " " +(p.amount.to_s) %></td>
               </tr>
