bug fixed=> course name instead of batch name in teacher's timetable
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1000 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/timetable.erb
+++ b/app/views/employee/timetable.erb
@@ -62,7 +62,7 @@
                 </div>
                 <div class="bottom">
                   <div class="subject">
-                    <%= tte.subject.batch.course.full_name %>
+                    <%= tte.subject.batch.full_name %>
                   </div>
                   <div class="employee">
                     <% subject = tte.subject.elective_group.nil? ? tte.subject : (tte.subject.elective_group.subjects.select { |subs| @employee_subjects_ids.include?(subs.id.to_s)  }).first %>
