--- a/app/views/employee_attendance/index.html.erb
+++ b/app/views/employee_attendance/index.html.erb
@@ -46,7 +46,7 @@
 
     <div class="link-box">
     <div class="link-heading"><%= link_to "#{t('attendance_report')}", :controller=>"employee_attendance", :action=>"report" %></div>
-    <div class="link-descr"><%= t('attendance_reports') %></div>
+    <div class="link-descr"><%= t('attendance_report') %></div>
   </div>
 
    </div>
