--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -185,8 +185,8 @@
     <% if @user.employee? %>
       <% @employee_subjects= @user.employee_record.subject_ids  %>
       <% if @employee_subjects.empty?%>
-
-        <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances %>
+       
+        <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances and @employee_subjects.present? %>
           <div class="button-box">
             <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
               :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
