[debanjan] issues in pms fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1011 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/master_fees.css
+++ b/public/stylesheets/finance/master_fees.css
@@ -150,10 +150,21 @@
 }
 .each_batch{
     font-size: 12px;
-    /*overflow:auto;
-    width:205px; */
+    overflow:auto;
+    width:205px; 
 
 }
+.each_batch input{
+    float:left;
+    width:auto;
+}
+.each_batch label {
+    float: left;
+    margin-left: 10px;
+    margin-top: -6px;
+    width: auto;
+}
+
 
 .batches {
     height: 183px;
