[debanjan] issues in pms fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1014 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_master_category_create_form.html.erb
+++ b/app/views/finance/_master_category_create_form.html.erb
@@ -47,7 +47,7 @@
     </div>
       <% @batches.each do |f| %>
         <div class="each_batch">
-          <%= check_box_tag "finance_fee_category[batch_id][]", f.id %> <%= f.full_name %>
+          <%= check_box_tag "finance_fee_category[batch_id][]", f.id %> <label><%= f.full_name %></label>
         </div>
       <% end %></div>
     </div>
