--- a/app/views/employee/_employee_select_list.erb
+++ b/app/views/employee/_employee_select_list.erb
@@ -31,6 +31,6 @@
      <% end %>
 
   <% else %>
-<p class="flash-msg"><%= t('message') %></p>
+<p class="flash-msg"><%= t('flash43') %></p>
   <% end %>
 </ul>
