[debanjan] issues in pms fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1024 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_master_particulars_list.html.erb
+++ b/app/views/finance/_master_particulars_list.html.erb
@@ -43,6 +43,7 @@
           <%unless fees.admission_no.nil?%>
             <%  student =  Student.find_by_admission_no(fees.admission_no)%>
             <%= student.nil? ? "N.A." : student.full_name %>
+            (<%= student.nil? ? "N.A." : student.admission_no %>)
           <% else %> - <% end %>
         </td>
         <td class="col-3"><%= fees.amount%></td>
