bug fixed=> course full name not shown in pdf of exam report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1025 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/previous_years_marks_overview_pdf.erb
+++ b/app/views/exam/previous_years_marks_overview_pdf.erb
@@ -49,7 +49,7 @@
             <div class="month">
               <% exam = ExamScore.new() %>
               <% @aggr =  exam.batch_wise_aggregate(@student,b)  %>
-              <h4> <%= b.name %> |<%= t('aggregate') %> : <%="%.2f" %@aggr.to_f unless @aggr== 'nil' or @aggr.nil? %></h4>
+              <h4> <%= b.course.full_name+" "+b.name %> |<%= t('aggregate') %> : <%="%.2f" %@aggr.to_f unless @aggr== 'nil' or @aggr.nil? %></h4>
             </div>
             <div class="extender"></div>
           </div>
