--- a/public/stylesheets/finance/compare_report.css
+++ b/public/stylesheets/finance/compare_report.css
@@ -1,6 +1,6 @@
 .submit_button {
     margin-top:15px;
-    margin-left:210px;
+    margin-left:257px;
     padding: 7px 10px;
     color: #fff;
     background: #27292B;
@@ -19,4 +19,7 @@
 .box{
     width:600px;
     margin:0px auto;
+}
+.label-field-pair label {
+    width: 227px;
 }
