[debanjan] issues in pms fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1030 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,7 +118,7 @@
                   <% end %>
                 <% end %>
               <% end %>
-              <a href="#" class="menuanchorclass" rel="anylinkmenu1"><%= t('more') %></a>
+              <a href="#" class="menuanchorclass" rel="anylinkmenu1"><%= t('more') %> ▼</a>
             <% end %>
           </div>
         </div>
