--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -39,13 +39,13 @@
 
     <script type="text/javascript">
       /***********************************************
-      * Dynamic Countdown script- © Dynamic Drive (http://www.dynamicdrive.com)
-      * This notice MUST stay intact for legal use
-      * Visit http://www.dynamicdrive.com/ for this script and 100s more.
-      ***********************************************/
+       * Dynamic Countdown script- © Dynamic Drive (http://www.dynamicdrive.com)
+       * This notice MUST stay intact for legal use
+       * Visit http://www.dynamicdrive.com/ for this script and 100s more.
+       ***********************************************/
       var anylinkmenu1={divclass:'anylinkmenu', inlinestyle:'', linktarget:''} //First menu variable. Make sure "anylinkmenu1" is a unique name!
       anylinkmenu1.items = [
-      <% if @current_user.admin %>
+<% if @current_user.admin %>
       ["<%= t('calendar_text') %>", "/calendar"],
       ["<%= t('examination') %>", "/exam"],
       ["<%= t('news_text') %>", "/news"],
@@ -53,14 +53,14 @@
       ["<%= t('human_resource') %>", "/employee/hr"],
       ["<%= t('finance_text') %>", "/finance/index"],
       ["<%= t('user_text') %>", "/user"],
-      <% end %>
-      <% FedenaPlugin::AVAILABLE_MODULES.each do |mod| %>
-        <% unless mod[:more_menu].blank? %>
-          <%= "['#{t("#{mod[:more_menu][:title]}")}','/#{mod[:more_menu][:controller]}/#{mod[:more_menu][:action].gsub("index","")}'],"  if permitted_to? "#{mod[:more_menu][:action]}".to_sym,"#{mod[:more_menu][:controller]}".to_sym  %>
-        <% end %>
-      <% end %>
-      ]
-      anylinkmenu.init("menuanchorclass");
+<% end %>
+<% FedenaPlugin::AVAILABLE_MODULES.each do |mod| %>
+  <% unless mod[:more_menu].blank? %>
+    <%= "['#{t("#{mod[:more_menu][:title]}")}','/#{mod[:more_menu][:controller]}/#{mod[:more_menu][:action].gsub("index","")}'],"  if permitted_to? "#{mod[:more_menu][:action]}".to_sym,"#{mod[:more_menu][:controller]}".to_sym  %>
+  <% end %>
+<% end %>
+  ]
+  anylinkmenu.init("menuanchorclass");
     </script>
   </head>
 
@@ -100,16 +100,16 @@
             if this_user.admin? %> -->
           <%= link_to "#{t('timetable_text')}", :controller => "timetable", :action => "index" \
             if this_user.admin? %>
-           <% FedenaPlugin::AVAILABLE_MODULES.each do |mod| %>
+          <% FedenaPlugin::AVAILABLE_MODULES.each do |mod| %>
             <% unless mod[:top_bar].blank? %>
               <% if permitted_to? "#{mod[:top_bar][:action]}".to_sym,"#{mod[:top_bar][:controller]}".to_sym %>
                 <%= link_to "#{t(mod[:top_bar][:title])}", {:controller => "#{mod[:top_bar][:controller]}", :action => "#{mod[:top_bar][:action]}"} %>
               <% end %>
             <% end %>
           <% end %>
-            <a href="#" class="menuanchorclass" rel="anylinkmenu1"><%= t('more') %></a>
+          <a href="#" class="menuanchorclass" rel="anylinkmenu1"><%= t('more') %> ▼</a>
+        </div>
       </div>
-    </div>
     </div>
 
     <div id="content_wrapper" >
