--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -107,7 +107,9 @@
               <% end %>
             <% end %>
           <% end %>
-          <a href="#" class="menuanchorclass" rel="anylinkmenu1"><%= t('more') %> ▼</a>
+          <%  if this_user.admin %>
+            <a href="#" class="menuanchorclass" rel="anylinkmenu1"><%= t('more') %> ▼</a>
+          <% end %>
         </div>
       </div>
     </div>
