sreeshanth(style issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1036 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_employee/profile.erb
+++ b/app/views/archived_employee/profile.erb
@@ -33,7 +33,7 @@
 <div id="nav">
   <ul>
     <li>
-      <a href="#" class="drops" id="link_one"><%= t('employee.profile.profile') %> &#9660;</a>
+      <a href="#" class="drops" id="link_one"><%= t('profile_text') %> &#9660;</a>
       <ul id="box_one" class="scriptaculously" style="display:none;">
         <li><%= link_to_remote "#{t('general')}", :url => {:action => "profile_general", :id => @employee.id}, :update => "profile-infos" %></li>
         <li><%= link_to_remote "#{t('personal')}", :url => {:action => "profile_personal", :id => @employee.id}, :update => "profile-infos" %></li>
