added dependecy check on employee permenant delete #971
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1037 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/remove.html.erb
+++ b/app/views/employee/remove.html.erb
@@ -28,6 +28,10 @@
 
 <div id="page-yield">
 
+  <% unless flash[:notice].nil? %>
+    <p class="flash-msg"> <%= flash[:notice] %> </p>
+  <% end %>
+
   <div id="student-details">
     <h4> <%= @employee.first_name %> |  <%= t('employee_number') %>  : <%= @employee.employee_number %> | Department : <%= @employee.employee_department.name %> </h4>
   </div>
