style issue for submit button in student admission previous institution details page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1040 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/student/previous_data.css
+++ b/public/stylesheets/student/previous_data.css
@@ -39,13 +39,14 @@
     background: none repeat scroll 0 0 #27292B;
     border: medium none;
     border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
     color: #FFFFFF;
     cursor: pointer;
     float: left;
     font-family: arial;
     font-size: 14px;
     font-weight: bold;
-    margin-left: 209px;
+    margin-left: 199px;
     margin-top: 8px;
     padding: 7px 10px;
 }
@@ -69,6 +70,7 @@
     background: none repeat scroll 0 0 #27292B;
     border: medium none;
     border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
     color: #FFFFFF;
     cursor: pointer;
     float: right;
