--- a/public/stylesheets/employee_attendance/employee_leave_reset_by_employee.css
+++ b/public/stylesheets/employee_attendance/employee_leave_reset_by_employee.css
@@ -68,7 +68,7 @@
 }
 
 .advanced_options{
-    margin-left:3px;
+    margin-left:90px;
     margin-top:5px;
     width:600px;
     float: left;
@@ -88,9 +88,9 @@
     background : #fff url(../../images/form_bg/smalltextbox.jpg) no-repeat;
     height : 43px;
     width : 150px;
-    float: left;
+    float: none;
 }
 #form-content{
     width:300px;
-    float: left;
+    float: none;
 }
