--- a/app/views/student/admission1.html.erb
+++ b/app/views/student/admission1.html.erb
@@ -157,7 +157,7 @@
 
         <div class="label-field-pair">
           <label for="student_category"><%= t('category') %></label>
-          <div class="text-input-bg"><%= s.select :student_category_id, StudentCategory.all.map {|c| [c.name, c.id]}, { :prompt => "#{t('select_a_category')}" } %></div>
+          <div class="text-input-bg"><%= s.select :student_category_id, @categories.map {|c| [c.name, c.id]}, { :prompt => "#{t('select_a_category')}" } %></div>
         </div>
 
         <hr class="label-underline"></hr>
