sreeshanth(hi yml changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1047 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/admission2.html.erb
+++ b/app/views/student/admission2.html.erb
@@ -73,7 +73,7 @@
         <hr class="sub-heading"></hr>
 
         <div class="label-field-pair">
-          <label for="parent_detail_name"><%= t('first_name') %></label>
+          <label for="parent_detail_name"><%= t('first_name') %><span class="necessary-field">*</span></label>
           <div class="text-input-bg"><%= f.text_field :first_name %></div>
         </div>
 
@@ -87,7 +87,7 @@
         <hr class="label-underline"></hr>
 
         <div class="label-field-pair">
-          <label for="parent_detail_relation"><%= t('relation') %></label>
+          <label for="parent_detail_relation"><%= t('relation') %><span class="necessary-field">*</span></label>
           <div class="text-input-bg"><%= f.text_field :relation %></div>
         </div>
 
