--- a/public/stylesheets/finance/master_fees.css
+++ b/public/stylesheets/finance/master_fees.css
@@ -40,8 +40,8 @@
 }
 
 #categories{
-    margin: 20px 56px 0 auto;
-    width: 874px;
+    margin: 20px 0 0 auto;
+    width: 100%;
 }
 
 .submit_button {
