bug fixed=> decimal places issue in student attendance report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1057 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student_attendance/_report.html.erb
+++ b/app/views/student_attendance/_report.html.erb
@@ -41,7 +41,7 @@
  <%= t('total_working_hours') %>: <%= working_days %>
 <% end %>|<%= t('total_present') %> : <%= total = (working_days - leaves).to_f %> |
 <% percentage =  (total/working_days)*100 unless working_days == 0 %>
-<%= t('percentage') %>: <%= percentage.round unless percentage.nil? %>
+<%= t('percentage') %>: <%= "%.2f" %(percentage) unless percentage.nil? %>
 </div>
 <% unless table_id.empty? %>
   <table id="listing" align="center" width="80%">
