bug fixed=> style issue in editing fee collection
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1058 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_fee_collection_edit.html.erb
+++ b/app/views/finance/_fee_collection_edit.html.erb
@@ -20,12 +20,12 @@
 <div id="form-errors"></div>
   <div class="label-field-pair">
     <label for="reason"> <%= t('fee_category') %>:</label>
-    <div class="text-input-bg"> <%= @finance_fee_collection.fee_category.name %></div>
+    <div class="text-input-bg"> <span><%= @finance_fee_collection.fee_category.name %></span></div>
   <div id ="batchs"></div>
   </div>
   <div class="label-field-pair">
     <label for="reason"> <%= t('course_for_category') %>:</label>
-    <div class="text-input-bg"> <%= @finance_fee_collection.batch.full_name %></div>
+    <div class="text-input-bg"> <span><%= @finance_fee_collection.batch.full_name %></span></div>
   <div id ="batchs"></div>
   </div>
   <div class="label-field-pair">
