modified forgot password content
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1062 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user_notifier/forgot_password.erb
+++ b/app/views/user_notifier/forgot_password.erb
@@ -18,8 +18,8 @@
 #under the License. -%>
 
 
-<%= @user.email %>,
+<%= @user.full_name %>,
 
 <%= t('password_rst_msg') %> <%= @url %>
 
-<%= t('password_rst_msg1') %>
+<%#= t('password_rst_msg1') %>
