--- a/app/views/additional_exam_groups/index.html.erb
+++ b/app/views/additional_exam_groups/index.html.erb
@@ -58,7 +58,7 @@
           <td class="col-2">
             <%= link_to exam_group.name, [@batch, exam_group] %>
             <span><small>
-                <%= link_to("#{t('delete_text')}", [@batch, exam_group], :method => 'delete', :confirm => "#{t('are_you_sure')}") if exam_group.removable? %>
+                <%= link_to("#{t('delete_text')}", [@batch, exam_group], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}") if exam_group.removable? %>
                 <s><%= "#{t('delete_text')}" unless exam_group.removable? %></s>
               </small></span>
           </td>
