--- a/app/views/employee_attendance/emp_attendance.erb
+++ b/app/views/employee_attendance/emp_attendance.erb
@@ -51,7 +51,7 @@
         <% else %>
           <% @report.each do |r| %>
             <div class="date-<%= cycle('odd', 'even') %>">
-              <%= I18n.l(r.attendance_date,:format=>:default) %>
+              <%= I18n.l(r.attendance_date,:format=>:normal) %>
               <% if r.is_half_day==true %>
                 (<%= t('half_day') %>)
               <% end %>
